<resources>
    <string name="app_name">EasyMates</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_sucess2">UserSucess2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="user_name">Miguel Santos</string>
    <string name="app_manage_group">Gerir grupo</string>
    <string name="app_aveiro">Casa de Aveiro</string>
    <string name="app_mais_casas">Adicionar mais casas</string>
    <string name="app_as_mais_casas">As minhas casas</string>
    <string name="app_shop">Lista de compras</string>
    <string name="app_group">Grupo atual</string>
    <string name="app_house">Casas</string>
    <string name="app_manage_house">Gestão da casa</string>
    <string name="app_manage_expenses">Despesas</string>
    <string name="app_user_settings">Utilizador</string>
    <string name="app_logout">Logout</string>
    <string name="app_profile">Perfil</string>
    <string name="app_settings">Definições</string>
    <string name="nav_demo">Teste</string>
    <string name="channel_name" />
</resources>
